--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,49 @@
+@unpublished{caveBiologicalControlCycad2022a,
+	title = {Biological Control of Cycad Aulacaspis Scale (Webinar)},
+	author = {Cave, Ronald D. and Moore, Aubrey},
+	date = {2022-03-08},
+	url = {https://aubreymoore.github.io/CAS-biocontrol-seminar/},
+	venue = {{University of Guam, Mangilao, Guam}}
+}
+
+
+@incollection{caveBiologicalControlCycad2022,
+	title = {Biological {{Control}} of the {{Cycad Aulacaspis Scale}}, {{{\emph{Aulacaspis}}}}{\emph{ Yasumatsui}}},
+booktitle = {Contributions of {{Classical Biological Control}} to {{U}}.{{S}}. {{Food Security}}, {{Forestry}}, and {{Biodiversity}}},
+author = {Cave, Ronald D. and Moore, Aubrey and Wright, Mark G.},
+date = {2022},
+url = {https://github.com/aubreymoore/CAS/raw/main/CAS_Biocontrol.pdf},
+file = {/home/aubrey/snap/zotero-snap/common/Zotero/storage/972IPBPI/Cave et al. - 2022 - Biological Control of the Cycad Aulacaspis Scale, .pdf}
+}
+
+@report{caveReportUSFish2022,
+	title = {Report to the {{US Fish}} and {{Wildlife Service}} – {{Pacific Islands Division}} on a Visit to {{Guam March}} 3–17, 2022:  {{Observations}}, Assessment and Recomendations for Applied Biological Control of the Cycad {{Aulacaspis}} Scale},
+	author = {Cave, Ronald D.},
+	date = {2022},
+	pages = {31},
+	location = {{University of Florida, Indian RiverResearch and Education Center, Ft. Pierce, Florida}},
+	url = {https://github.com/aubreymoore/CAS-biocontrol-seminar/raw/main/Cave-CAS-report-2022.pdf},
+	file = {/home/aubrey/snap/zotero-snap/common/Zotero/storage/KJ8ZGAN8/Cave - 2022 - Report to the US Fish and Wildlife Service – Pacif.pdf}
+}
+
+@online{hansonUOGTokyoUniversity,
+	title = {{{UOG}}, {{Tokyo University}} Test a Rhino Beetle Virus from {{Palau}} on {{Guam}}’s Beetles},
+	author = {Hanson, Jackie},
+	url = {https://www.uog.edu/news-announcements/2022-2023/2023-uog-tokyo-university-test-a-virus-on-guams-rhino-beetles.php},
+	urldate = {2023-05-08},
+	abstract = {A team of scientists is testing one of about 25 virus strains that may work as a biocontrol agent for Guam's beetle type.},
+	langid = {english},
+	file = {/home/aubrey/snap/zotero-snap/common/Zotero/storage/5ZRQT6HJ/2023-uog-tokyo-university-test-a-virus-on-guams-rhino-beetles.html}
+}
+
+
+@unpublished{NIFA2022,
+	title = {Plant Protection and Biosecurity for Guam and Micronesia},
+	author = {National Institute of Food and Agriculture},
+	year = {2023-06-27},
+	url = {https://github.com/aubreymoore/POW/blob/main/docs/USDA-NIFA-2022-07-31.pdf},
+}
+
 @unpublished{moorePressRelease2023,
 	title = {Press Release: Coconut Rhinoceros Beetle Damage Maps},
 	author = {Moore, Aubrey},
