--- a/gisc2023.tex
+++ b/gisc2023.tex
@@ -14,8 +14,8 @@ breaklinks=true,pdfborder={0 0 0},pdfborderstyle={},backref=false,colorlinks=tru
 \setlength\bibitemsep{2\itemsep}
 \addbibresource{refs.bib}
 
-%opening
-\title{Report to the Guam Invasive Species Council on University of Guam Invasive Species Activities}
+\titlehead{Report to the Guam Invasive Species Council}
+\title{University of Guam Invasive Species Activities}
 \author{Aubrey Moore}
 
 \begin{document}
@@ -53,7 +53,19 @@ The plan includes five objectives:
 
 \section{Recently Detected Invasive Species}
 
-\subsection{Citrus blackfly, \textit{Aleurocanthus woglumi}}
+\subsection{\textit{Icerya imperatae} (Hemiptera: Monophlebidae)}
+
+This pest of grasses was first detected on Guam in December 2021 \cite{moore2021}.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\linewidth]{images/icerya}
+	\caption{\textit{Icerya imperatae}}
+	\label{fig:icerya}
+\end{figure}
+
+
+\subsection{Citrus blackfly, \textit{Aleurocanthus woglumi} (Hemiptera: Aleyrodidae)}
 
 This major pest of citrus was first detected on Guam in March 2023 \cite{moore2023}. It is not expected to cause major damage because it is parasitized by biological control agents previously introduced for a closely related insect pest, the orange spiny whitefly, \textit{A. spiniferus}.
 
@@ -86,8 +98,6 @@ UOG is participating in a Pacific-wide effort to find an effective biological co
 OrNV samples from Palau were recently tested but no significant responses were detected. The next set of isolates to be screened are from the Philippines.
 
 This work is being done in collaboration with the Tokyo University of Agriculture and Technology, Palau Community College, and AgResearch New Zealand \cite{hansonUOGTokyoUniversity}. This work is funded by grants from DOI-OIA and the US Forest Service.
-
-\clearpage
 
 \section{Work on Cycad Aulacaspis Scale (CAS)}
 
