--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,11 @@
+@online{moore2021,
+	title = {iNaturalist observation: \textit{Icerya imperatae}},
+	author = {Moore, Aubrey},
+	date = {2021-12-14},
+	url = {https://www.inaturalist.org/observations/103065598},
+	urldate = {2023-05-03},
+}
+
 @unpublished{caveBiologicalControlCycad2022a,
 	title = {Biological Control of Cycad Aulacaspis Scale (Webinar)},
 	author = {Cave, Ronald D. and Moore, Aubrey},
@@ -5,7 +13,6 @@
 	url = {https://aubreymoore.github.io/CAS-biocontrol-seminar/},
 	venue = {{University of Guam, Mangilao, Guam}}
 }
-
 
 @incollection{caveBiologicalControlCycad2022,
 	title = {Biological {{Control}} of the {{Cycad Aulacaspis Scale}}, {{{\emph{Aulacaspis}}}}{\emph{ Yasumatsui}}},
