--- a/gisc2023.tex
+++ b/gisc2023.tex
@@ -115,10 +115,11 @@ Work towards finding effective biological control agents for CAS continues \cite
 	\item Two UOG programs, the Guam Plant Extinction Prevention Program (GPEPP) and the Center for Island Sustainability (CIS) and are propagating \textit{Cycas micronesica} are conducting field studies which include monitoring and controlling invasive species. 
 	
 	\item UOG has recently hired Dr. Glenn Dulla as a plant pathologist and Dr. Rachel Jolly as a restoration ecologist.
+	
+	\item A scientific article entitled "A Mathematical Model of Invasion and Control of Coconut Rhinoceros Beetle, \textit{Oryctes rhinoceros} (L.), in Guam" was published in the Journal of Theoretical Biology \cite{caasiMathematicalModelInvasion2023}. This model was  constructed during a summer program for university and high school students organized by the UOG Math Department. 
+	
 \end{itemize}
 
-
-\clearpage
 \printbibliography
 
 \end{document}
