--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,22 @@
+@article{caasiMathematicalModelInvasion2023,
+	title = {A Mathematical Model of Invasion and Control of Coconut Rhinoceros Beetle \textit{Oryctes rhinoceros (L.), in Guam}},
+	author = {Caasi, Jovic Aaron S. and Guerrero, Alex Leon and Yoon, Kangsan and Aquino, Leslie J. Camacho and Moore, Aubrey and Oh, Hyunju and Rychtář, Jan and Taylor, Dewey},
+	date = {2023-05-18},
+	journaltitle = {Journal of Theoretical Biology},
+	shortjournal = {Journal of Theoretical Biology},
+	pages = {111525},
+	issn = {0022-5193},
+	doi = {10.1016/j.jtbi.2023.111525},
+	url = {https://www.sciencedirect.com/science/article/pii/S0022519323001212},
+	urldate = {2023-05-18},
+	abstract = {The coconut rhinoceros beetle (CRB), is one of the most damaging pests to coconut palms causing severe economic harm. Its expansion from Asia to the Pacific in the early 20th century has been stopped by virus control. However, a new haplotype CRB-Guam has recently escaped this control and invaded Guam, other Pacific islands, and has even established itself in the Western Hemisphere. In this paper, we present a compartmental ODE model of CRB population and control. We carefully consider CRB life stages and its interplay with coconut palms as well as “the green waste”, the organic matters used by CRB for breeding sites. We calibrate and validate the model based on data count of CRBs trapped in Guam between 2008 and 2014. We derive the basic reproduction number determining the CRB population growth without any control measures. We also identify control levels required to eliminate CRBs. We show that, in the absence of viable virus control, the sanitation, i.e., the removal of the green waste is the most efficient way to control the population. Our model predicts that the sanitation efforts need to roughly double from the current levels to eliminate CRB from Guam. Furthermore, we demonstrate that a rare event like Typhoon Dolphin that hit Guam in 2015 can lead to a quick rise of the CRB population.},
+	langid = {english},
+	keywords = {Biological control,Breeding site,Insect pest,Mathematical model,Typhoon},
+	file = {/home/aubrey/snap/zotero-snap/common/Zotero/storage/HZPUP6LX/Caasi et al. - 2023 - A mathematical model of invasion and control of co.pdf;/home/aubrey/snap/zotero-snap/common/Zotero/storage/36PWSB7I/S0022519323001212.html}
+}
+
+
+
 @online{moore2021,
 	title = {iNaturalist observation: \textit{Icerya imperatae}},
 	author = {Moore, Aubrey},
