--- a/gisc2023.tex
+++ b/gisc2023.tex
@@ -60,7 +60,7 @@ This pest of grasses was first detected on Guam in December 2021 \cite{moore2021
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\linewidth]{images/icerya}
-	\caption{\textit{Icerya imperatae}}
+	\caption{\textit{Icerya imperatae}. Photo by Ken Puliafico, Colorado State University.}
 	\label{fig:icerya}
 \end{figure}
 
@@ -117,6 +117,8 @@ Work towards finding effective biological control agents for CAS continues \cite
 	\item UOG has recently hired Dr. Glenn Dulla as a plant pathologist and Dr. Rachel Jolly as a restoration ecologist.
 	
 	\item A scientific article entitled "A Mathematical Model of Invasion and Control of Coconut Rhinoceros Beetle, \textit{Oryctes rhinoceros} (L.), in Guam" was published in the Journal of Theoretical Biology \cite{caasiMathematicalModelInvasion2023}. This model was  constructed during a summer program for university and high school students organized by the UOG Math Department. 
+	
+	\item UOG faculty and staff collaborated in writing an online article on coconut rhinoceros beetle for the US Forest Service Forest Insect and Disease Leaflet series \cite{mooreCoconutRhinocerosBeetle2023}.
 	
 \end{itemize}
 
