--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,12 @@
+@online{mooreCoconutRhinocerosBeetle2023,
+	title = {Coconut {{Rhinoceros Beetle}}. {{US Forest Service}}, {{Forest Insect}} and {{Disease Leaflet}} 191},
+	author = {Moore, Aubrey and Jackson, Trevor and Quitugua, Roland and Bevacqua, Robert and Sayama, Jonae and Miller, Ross},
+	date = {2023-04},
+	url = {https://www.fs.usda.gov/foresthealth/docs/fidls/FIDL-191-CoconutRhinocerosBeetle.pdf},
+	langid = {english},
+	file = {/home/aubrey/snap/zotero-snap/common/Zotero/storage/P735J9FV/Forest Insect and Disease Leaflet 191 Coconut Rhi.pdf}
+}
+
 @article{caasiMathematicalModelInvasion2023,
 	title = {A Mathematical Model of Invasion and Control of Coconut Rhinoceros Beetle \textit{Oryctes rhinoceros (L.), in Guam}},
 	author = {Caasi, Jovic Aaron S. and Guerrero, Alex Leon and Yoon, Kangsan and Aquino, Leslie J. Camacho and Moore, Aubrey and Oh, Hyunju and Rychtář, Jan and Taylor, Dewey},
@@ -14,8 +23,6 @@
 	keywords = {Biological control,Breeding site,Insect pest,Mathematical model,Typhoon},
 	file = {/home/aubrey/snap/zotero-snap/common/Zotero/storage/HZPUP6LX/Caasi et al. - 2023 - A mathematical model of invasion and control of co.pdf;/home/aubrey/snap/zotero-snap/common/Zotero/storage/36PWSB7I/S0022519323001212.html}
 }
-
-
 
 @online{moore2021,
 	title = {iNaturalist observation: \textit{Icerya imperatae}},
